--- a/electron/index3.html
+++ b/electron/index3.html
@@ -74,7 +74,7 @@
     const shell = require('electron').shell;
     const validation = require('../src/validation');
 
-    const apiEndpoint = 'http://localhost:2022';
+    const apiEndpoint = 'https://api.fog.fm';
     const configFile = path.join(app.getPath('userData'), 'save/server-config.json');
     var loadJson = {};
     var bootFlag = false;
