--- a/electron/index3.html
+++ b/electron/index3.html
@@ -38,10 +38,10 @@
           <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path fill="#8c9eff" d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"/></svg>
           <span>Publish Online</span>
         </li>
-        <li id="nav-about" class="left-nav-button waves-effect waves-purple">
+        <!-- <li id="nav-about" class="left-nav-button waves-effect waves-purple">
           <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 -1 24 24" fill="#fff"><path d="M4 2c-1.093 0-2 .907-2 2v18.406l1.719-1.687L6.438 18H20c1.093 0 2-.907 2-2V4c0-1.093-.907-2-2-2H4zm0 2h16v12H5.594l-.313.281L4 17.563V4zm7 2v2h2V6h-2zm0 3v5h2V9h-2z"/></svg>
           <span>About</span>
-        </li>
+        </li> -->
       </ul>
 
       <!-- Boot Server Button -->
@@ -74,7 +74,7 @@
     const shell = require('electron').shell;
     const validation = require('../src/validation');
 
-    const apiEndpoint = 'https://api.fog.fm';
+    const apiEndpoint = 'https://api.fogmachine.io';
     const configFile = path.join(app.getPath('userData'), 'save/server-config.json');
     var loadJson = {};
     var bootFlag = false;
@@ -1200,7 +1200,7 @@
         },
         methods: {
           goToSignUp: function() {
-            shell.openExternal('https://fogmachine.io/sign-up.html');
+            shell.openExternal('https://fogmachine.io/reverse-proxy-network/');
           },
           maybeResetForm: function() {
             if (this.username === '' && this.password === '') {
@@ -1400,13 +1400,13 @@
         resetNav(this);
       }
 
-      document.getElementById("nav-about").onclick = function(){
-        if(bootFlag === true) {
-          return;
-        }
-        vm.currentViewMain = 'about-view';
-        resetNav(this);
-      }
+      // document.getElementById("nav-about").onclick = function(){
+      //   if(bootFlag === true) {
+      //     return;
+      //   }
+      //   vm.currentViewMain = 'about-view';
+      //   resetNav(this);
+      // }
 
       function resetNav(that) {
         document.querySelectorAll('.left-nav-button').forEach((el) => {
