--- a/electron/index3.html
+++ b/electron/index3.html
@@ -573,12 +573,12 @@
             clipboard.writeText(loadJson.serverConfig.bitwarden.adminToken);
           },
           selectDirectory: function(el) {
-            dialog.showOpenDialog({properties: ['openDirectory']}, (selectedFile) => {
-              if (selectedFile.length === 0) {
+            dialog.showOpenDialog({properties: ['openDirectory']}).then(selectedFile => {
+              if (selectedFile.filePaths.length === 0){
                 return;
               }
-              el.target.value = selectedFile[0];
-              loadJson.serverConfig.bitwarden.directory = selectedFile[0];
+              el.target.value = selectedFile.filePaths[0];
+              loadJson.serverConfig.bitwarden.directory = selectedFile.filePaths[0];
               el.target.blur();
               fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
             });
@@ -774,12 +774,12 @@
             shell.showItemInFolder(loadJson.serverConfig.minecraftBedrock.directory);
           },
           selectDirectory: function(el) {
-            dialog.showOpenDialog({properties: ['openDirectory']}, (selectedFile) => {
-              if(selectedFile.length === 0){
+            dialog.showOpenDialog({properties: ['openDirectory']}).then(selectedFile => {
+              if (selectedFile.filePaths.length === 0){
                 return;
               }
-              el.target.value = selectedFile[0];
-              loadJson.serverConfig.minecraftBedrock.directory = selectedFile[0];
+              el.target.value = selectedFile.filePaths[0];
+              loadJson.serverConfig.minecraftBedrock.directory = selectedFile.filePaths[0];
               el.target.blur();
               fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
             });
@@ -1045,12 +1045,12 @@
             fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
           },
           selectDirectory: function(el) {
-            dialog.showOpenDialog({properties: ['openDirectory']}, (selectedFile) => {
-              if(selectedFile.length === 0){
+            dialog.showOpenDialog({properties: ['openDirectory']}).then(selectedFile => {
+              if (selectedFile.filePaths.length === 0){
                 return;
               }
-              el.target.value = selectedFile[0];
-              loadJson.serverConfig.minecraftJava.directory = selectedFile[0];
+              el.target.value = selectedFile.filePaths[0];
+              loadJson.serverConfig.minecraftJava.directory = selectedFile.filePaths[0];
               el.target.blur();
               fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
             });
@@ -1136,12 +1136,12 @@
             fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
           },
           selectDirectory: function(el) {
-            dialog.showOpenDialog({properties: ['openDirectory']}, (selectedFile) => {
-              if(selectedFile.length === 0){
+            dialog.showOpenDialog({properties: ['openDirectory']}).then(selectedFile => {
+              if (selectedFile.filePaths.length === 0){
                 return;
               }
-              el.target.value = selectedFile[0];
-              loadJson.serverConfig.fileServer.directory = selectedFile[0];
+              el.target.value = selectedFile.filePaths[0];
+              loadJson.serverConfig.fileServer.directory = selectedFile.filePaths[0];
               el.target.blur();
               fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
             });
